[ECO-2256] Fix line break on market with three emojis (#328)

--- a/src/typescript/frontend/src/app/global.css
+++ b/src/typescript/frontend/src/app/global.css
@@ -27,36 +27,6 @@
   --error: #f3263e;
 }
 
-.med-pixel-text {
-  font-size: 20px !important;
-  line-height: 25px;
-  font-family: var(--font-pixelar);
-}
-
-@media screen and (min-width: 768px) {
-  .med-pixel-text {
-    font-size: 22px !important;
-    line-height: 27px;
-    font-family: var(--font-pixelar);
-  }
-}
-
-@media screen and (min-width: 1024px) {
-  .med-pixel-text {
-    font-size: 24px !important;
-    line-height: 30px;
-    font-family: var(--font-pixelar);
-  }
-}
-
-@media screen and (min-width: 1440px) {
-  .med-pixel-text {
-    font-size: 32px !important;
-    line-height: 40px;
-    font-family: var(--font-pixelar);
-  }
-}
-
 .med-pixel-search {
   width: 18px;
 }
